<resources>
    <string name="app_name">Management</string>
    <string name="project_title_label">项目标题</string>
    <string name="project_commit_label">项目简介</string>
    <string name="project_start_label">项目开始时间</string>
    <string name="project_end_label">项目结束时间</string>

    <string name="task_title_label">任务标题</string>
    <string name="task_commit_label">任务简介</string>
    <string name="task_header_label">负责人</string>
    <string name="task_start_label">任务开始时间</string>
    <string name="task_end_label">任务结束时间</string>

    <string name="add_task">添加任务</string>
    <string name="view_tasks">查看任务</string>
    <string name="operate">操作</string>
    <string name="people_label">人</string>
    <string name="people_count_label">(人数)</string>
    <string name="div_label">-</string>

    <string name="new_project">新项目</string>
    <string name="new_task">新任务</string>
    <string name="delete_label">删除</string>
    <string name="search_hint">搜索任务或工程</string>
    <string name="search">搜索</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>

</resources>