<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/project_list_item"
    android:name="com.hziee.management.ProjectListFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ProjectListFragment"
    tools:listitem="@layout/fragment_project">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="354dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task_title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="118dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_start_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_title" />

    <TextView
        android:id="@+id/div_symbol"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/div_label"
        app:layout_constraintStart_toEndOf="@+id/start_time"
        app:layout_constraintTop_toBottomOf="@+id/task_title" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="118dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_end_label"
        app:layout_constraintStart_toEndOf="@+id/div_symbol"
        app:layout_constraintTop_toBottomOf="@+id/task_title" />

    <TextView
        android:id="@+id/task_header"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/task_header_label"
        app:layout_constraintStart_toEndOf="@+id/end_time"
        app:layout_constraintTop_toBottomOf="@+id/task_title" />


</androidx.constraintlayout.widget.ConstraintLayout>